@@ -19,7 +19,7 @@ repositories {
 
 dependencies {
 	// Framework
-	compile 'net.javapla.jawn:jawn-server-undertow:0.8.9-b01'
+	compile 'net.javapla.jawn:jawn-server-undertow:0.8.9-b02'
 	//compile project(':jawn-server'), project(':jawn-server-undertow'), project(':jawn-server-jetty')
 
 	
@@ -37,6 +37,7 @@ run {
     if(project.hasProperty('args')){
         args project.args.split(',')
     }
+    jvmArgs = ['-XX:+UseNUMA','-XX:+UseParallelGC','-XX:+AggressiveOpts']
 }
 applicationDistribution.from("webapp") {
     into "webapp"
